tests/rosetta/transpiler/Java/conditional-structures-8.error
compile: exit status 1
/tmp/TestJavaTranspiler_Rosetta_Goldenconditional-structures-83981367291/001/Main.java:4: error: not a statement
            null;
            ^
/tmp/TestJavaTranspiler_Rosetta_Goldenconditional-structures-83981367291/001/Main.java:7: error: not a statement
            null;
            ^
2 errors
