tests/rosetta/transpiler/Java/conditional-structures-8.java
public class Main {
    static void example8(boolean b1, boolean b2) {
        if (b1) {
            null;
        }
        if (b2) {
            null;
        }
    }
    public static void main(String[] args) {
    }
}
